<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_search"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/marginSearch"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSearch"
            android:hint="@string/search"
            android:textSize="@dimen/txtMedium"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSearch"
            android:orientation="horizontal">


            <TextView

                android:id="@+id/tvNumberOfResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:layout_gravity="center"
                android:text="@string/numberOfResult"
                android:textSize="@dimen/txtMedium"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnSubSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSmall"
                android:padding="@dimen/paddingExplanation"
                android:background="@drawable/btn_enable"
                android:text="@string/subSearch" />

            <Button
                android:id="@+id/btnFullSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/btn_enable"
                android:textSize="@dimen/txtSmall"
                android:padding="@dimen/paddingExplanation"
                android:text="@string/fullSearch" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"

            android:layout_marginTop="@dimen/marginSearch"
            android:background="@android:color/black" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"/>

        <TextView
            android:id="@+id/tvEmptyMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/noSearchResult"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
