<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etPageNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:hint="@string/msgPageNumber"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtMedium">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_enable"
            android:text="@string/go"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMedium" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_enable"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMedium" />
    </LinearLayout>

</LinearLayout>