<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/paddingExplanation">


        <TextView
            android:id="@+id/tvPageNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/pageNumber"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMedium" />

        <TextView
            android:id="@+id/tvAyaNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/ayaNumber"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMedium" />

        <TextView
            android:id="@+id/tvSoraName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/soraName"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAyaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="aya"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtMedium"
        android:layout_margin="@dimen/paddingExplanation"/>
</LinearLayout>